Fixed incorrect test runners

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,11 +35,11 @@ jobs:
           composer require "laravel/framework:${{ matrix.laravel }}" --no-interaction --no-update
           composer update --${{ matrix.stability }} --prefer-dist --no-interaction
 
-      - name: Execute static analysis
-        run: vendor/bin/pest --parallel
+      - name: Run static analysis
+        run: vendor/bin/phpstan analyse
 
       - name: Ensure code structure
         run: vendor/bin/pint --test
 
-      - name: Execute tests
-        run: vendor/bin/pest phpstan analyse
+      - name: Run tests
+        run: vendor/bin/pest
