--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
         }
     ],
     "require": {
-        "php": "^8.2",
-        "laravel/framework": "^11.0"
+        "laravel/framework": "^8.0|^9.0|^10.0|^11.0"
     },
     "require-dev": {
         "larastan/larastan": "^2.0",
