--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "require-dev": {
         "larastan/larastan": "^2.0",
         "laravel/pint": "^1.17",
-        "orchestra/testbench": "^9.3",
+        "orchestra/testbench": "^6.0|^7.0|^8.0|^9.0",
         "pestphp/pest": "^2.35"
     },
     "autoload": {
