--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,8 @@ jobs:
       fail-fast: true
       matrix:
         os: [ ubuntu-latest ]
-        php: [ 8.0,8.1,8.2, 8.3 ]
-        laravel: [ 8.*,9.*,10.*,11.* ]
+        php: [ 8.1,8.2,8.3 ]
+        laravel: [ 10.*,11.* ]
         stability: [ prefer-stable ]
         exclude:
           - laravel: 10.*
