--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         os: [ ubuntu-latest ]
         php: [ 8.1,8.2,8.3 ]
-        laravel: [ 10.*,11.* ]
+        laravel: [ 9.*,10.*,11.* ]
         stability: [ prefer-stable ]
         exclude:
           - laravel: 10.*
