--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "larastan/larastan": "^2.0",
         "laravel/pint": "^1.17",
         "orchestra/testbench": "^7.0|^8.0|^9.0",
-        "pestphp/pest": "^2.0"
+        "pestphp/pest": "^1.0|^2.0"
     },
     "autoload": {
         "psr-4": {
