--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,10 +12,17 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-latest]
-        php: [8.2,8.3]
-        laravel: [11.*]
-        stability: [prefer-stable]
+        os: [ ubuntu-latest ]
+        php: [ 8.1,8.2,8.3 ]
+        laravel: [ 9.*,10.*,11.* ]
+        stability: [ prefer-stable ]
+        exclude:
+          - laravel: 10.*
+            php: 8.0
+          - laravel: 11.*
+            php: 8.0
+          - laravel: 11.*
+            php: 8.1
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
