--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,13 @@
         }
     ],
     "require": {
-        "php": "^8.2",
-        "laravel/framework": "^11.0"
+        "laravel/framework": "^9.0|^10.0|^11.0"
     },
     "require-dev": {
         "larastan/larastan": "^2.0",
         "laravel/pint": "^1.17",
-        "orchestra/testbench": "^9.3",
-        "pestphp/pest": "^2.35"
+        "orchestra/testbench": "^7.0|^8.0|^9.0",
+        "pestphp/pest": "^1.0|^2.0"
     },
     "autoload": {
         "psr-4": {
