--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,8 @@ jobs:
       fail-fast: true
       matrix:
         os: [ ubuntu-latest ]
-        php: [ 8.1,8.2,8.3 ]
-        laravel: [ 9.*,10.*,11.* ]
+        php: [8.1, 8.2, 8.3, 8.4]
+        laravel: [ 9.*,10.*,11.*,12.* ]
         stability: [ prefer-stable ]
         exclude:
           - laravel: 10.*
@@ -22,6 +22,8 @@ jobs:
           - laravel: 11.*
             php: 8.0
           - laravel: 11.*
+            php: 8.1
+          - laravel: 12.*
             php: 8.1
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
