--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,8 @@
 name: run-tests
 
 on:
+  workflow_dispatch:
+    branches: [main]
   push:
     branches: [main]
   pull_request:
@@ -13,8 +15,8 @@ jobs:
       fail-fast: true
       matrix:
         os: [ ubuntu-latest ]
-        php: [ 8.1,8.2,8.3 ]
-        laravel: [ 9.*,10.*,11.* ]
+        php: [8.1, 8.2, 8.3, 8.4]
+        laravel: [ 9.*,10.*,11.*,12.* ]
         stability: [ prefer-stable ]
         exclude:
           - laravel: 10.*
@@ -22,6 +24,8 @@ jobs:
           - laravel: 11.*
             php: 8.0
           - laravel: 11.*
+            php: 8.1
+          - laravel: 12.*
             php: 8.1
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
@@ -42,8 +46,8 @@ jobs:
           composer require "laravel/framework:${{ matrix.laravel }}" --no-interaction --no-update
           composer update --${{ matrix.stability }} --prefer-dist --no-interaction
 
-      - name: Run static analysis
-        run: vendor/bin/phpstan analyse
+      # - name: Run static analysis
+      #   run: vendor/bin/phpstan analyse
 
       - name: Ensure code structure
         run: vendor/bin/pint --test
